[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modenv"
version = "0.1.0"
description = "Modular Python virtual environments using .pth files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Devanshu Singla", email = "devanshu.singla@gmail.com" }
]

[project.scripts]
modenv = "modenv.cli:main"

[tool.stacked_venv]
ai_assisted = true
acknowledgement = "ChatGPT (OpenAI)"

[tool.setuptools]
packages = ["modenv"]
